# WikiRAG

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
wiki_rag/servers/: embeddings.py
