[tool.poetry]
name = "wiki_rag"
version = "0.1.0"
description = "LLM responses powered by Wikipedia (fully local)"
authors = ["Priyatham Kattakinda <priyathamkat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
transformers = "^4.48.3"
torch = "^2.6.0"
einops = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"